# fonts.fireflyzero.com

./: .gitignore  Cargo.toml  README.md  ascii.txt  build.sh
src/: extra_fonts.rs  fonts.rs  generator.rs  html.rs  image.rs  main.rs
templates/: base.html.j2  card.html.j2  encoding.html.j2  index.html.j2
